outputs_20260401-002651-1841aede/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\include/IfxEgtm_Pwm.h:6,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:17:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\include/IfxEgtm.h:47:5: error: unknown type name 'IfxApApu_ApuConfig'
   47 |     IfxApApu_ApuConfig apuConfig;
      |     ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\include/IfxEgtm.h:51:5: error: unknown type name 'IfxApProt_ProtConfig'
   51 |     IfxApProt_ProtConfig proteConfig;
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\include/IfxEgtm.h:52:5: error: unknown type name 'IfxApApu_ApuConfig'
   52 |     IfxApApu_ApuConfig   apuConfig;
      |     ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\include/IfxEgtm.h:56:5: error: unknown type name 'IfxApApu_ApuConfig'
   56 |     IfxApApu_ApuConfig apuConfig;
      |     ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\include/IfxEgtm.h:69:5: error: unknown type name 'IfxApProt_ProtConfig'
   69 |     IfxApProt_ProtConfig protseConfig;
      |     ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\include/IfxEgtm_Pwm.h:120:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  120 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:35:36: error: 'IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT' undeclared (first use in this function)
   35 | #define PHASE_U_HS_PIN           (&IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT)
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:83:61: note: in expansion of macro 'PHASE_U_HS_PIN'
   83 |     output[0].pin                   = (IfxEgtm_Pwm_ToutMap*)PHASE_U_HS_PIN;
      |                                                             ^~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:35:36: note: each undeclared identifier is reported only once for each function it appears in
   35 | #define PHASE_U_HS_PIN           (&IfxEgtm_ATOM0_0_TOUT64_P20_8_OUT)
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:83:61: note: in expansion of macro 'PHASE_U_HS_PIN'
   83 |     output[0].pin                   = (IfxEgtm_Pwm_ToutMap*)PHASE_U_HS_PIN;
      |                                                             ^~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:36:36: error: 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' undeclared (first use in this function)
   36 | #define PHASE_U_LS_PIN           (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:84:61: note: in expansion of macro 'PHASE_U_LS_PIN'
   84 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap*)PHASE_U_LS_PIN;
      |                                                             ^~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:37:36: error: 'IfxEgtm_ATOM0_1_TOUT66_P20_10_OUT' undeclared (first use in this function)
   37 | #define PHASE_V_HS_PIN           (&IfxEgtm_ATOM0_1_TOUT66_P20_10_OUT)
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:90:61: note: in expansion of macro 'PHASE_V_HS_PIN'
   90 |     output[1].pin                   = (IfxEgtm_Pwm_ToutMap*)PHASE_V_HS_PIN;
      |                                                             ^~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:38:36: error: 'IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT' undeclared (first use in this function)
   38 | #define PHASE_V_LS_PIN           (&IfxEgtm_ATOM0_1N_TOUT67_P20_11_OUT)
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:91:61: note: in expansion of macro 'PHASE_V_LS_PIN'
   91 |     output[1].complementaryPin      = (IfxEgtm_Pwm_ToutMap*)PHASE_V_LS_PIN;
      |                                                             ^~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:39:36: error: 'IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT' undeclared (first use in this function)
   39 | #define PHASE_W_HS_PIN           (&IfxEgtm_ATOM0_2_TOUT68_P20_12_OUT)
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:97:61: note: in expansion of macro 'PHASE_W_HS_PIN'
   97 |     output[2].pin                   = (IfxEgtm_Pwm_ToutMap*)PHASE_W_HS_PIN;
      |                                                             ^~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:40:36: error: 'IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT' undeclared (first use in this function)
   40 | #define PHASE_W_LS_PIN           (&IfxEgtm_ATOM0_2N_TOUT69_P20_13_OUT)
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\src\egtm_atom_3_phase_inverter_pwm.c:98:61: note: in expansion of macro 'PHASE_W_LS_PIN'
   98 |     output[2].complementaryPin      = (IfxEgtm_Pwm_ToutMap*)PHASE_W_LS_PIN;
      |                                                             ^~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:9:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_i4havhym\include/IfxEgtm_Pwm.h:120:5: error: unknown type name 'IfxEgtm_Pwm_FastShutoffConfig'
  120 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
